--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "@curios/tailwind-balloons",
+  "name": "tw-hover-balloons",
   "description": "A tailwind plugin to show text-balloons on hover over any dom element.",
   "version": "0.1.0",
   "main": "lib/index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "peerDependencies": {
     "tailwindcss": ">=2.0.0 || >=3.0.0"
   },
@@ -15,9 +18,14 @@
     "tooltips",
     "balloons"
   ],
-  "repository": "github:CuriosBasant/tailwind-balloons",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CuriosBasant/tailwind-balloons.git"
+  },
+  "bugs": {
+    "url": "https://github.com/CuriosBasant/tailwind-balloons/issues"
+  },
   "homepage": "https://github.com/CuriosBasant/tailwind-balloons#readme",
-  "bugs": "https://github.com/CuriosBasant/tailwind-balloons/issues",
   "author": "CuriosBasant <basantbrpl@gmail.com>",
   "license": "MIT"
 }
